// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBody renders correct snapshot 1`] = `
<div>
  <div
    class="DescribeElementCardBody-cardContent-1"
  >
    <p
      class="MuiTypography-root DescribeElementCardBody-bodyText-2 MuiTypography-body2"
    >
      expectedContent
    </p>
  </div>
</div>
`;

exports[`DescribeElementCardBody renders correct snapshot with switches 1`] = `
<div>
  <div
    class="MuiCardMedia-root DescribeElementCardBody-cardImage-38"
    style="background-image: url(moreContent);"
  />
</div>
`;
